# edgeware-node

modules/edge-identity/: Cargo.toml
modules/edge-signaling/: Cargo.toml
modules/edge-treasury-reward/: Cargo.toml
modules/edge-voting/: Cargo.toml
node/cli/: Cargo.toml
node/executor/: Cargo.toml
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
node/service/: Cargo.toml
node/service/src/: chain_spec.rs  fixtures.rs
scripts/: init.sh
