[package]
name = "edgeware-executor"
version = "0.1.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
trie-root = "0.14.0"
parity-codec = "4.1.1"
runtime_io = { package = "sr-io", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
state_machine = { package = "substrate-state-machine", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
substrate-executor = { git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
primitives = { package = "substrate-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
trie = { package = "substrate-trie", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }

[dev-dependencies]
test-client = { package = "substrate-test-client", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
keyring = { package = "substrate-keyring", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
runtime_support = { package = "srml-support", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
balances = { package = "srml-balances", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
session = { package = "srml-session", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
staking = { package = "srml-staking", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
system = { package = "srml-system", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
timestamp = { package = "srml-timestamp", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
treasury = { package = "srml-treasury", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
contracts = { package = "srml-contracts", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
grandpa = { package = "srml-grandpa", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
indices = { package = "srml-indices", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
wabt = "~0.7.4"

[features]
benchmarks = []