[package]
name = "edgeware-executor"
version = "1.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
trie-root = "0.14.0"
parity-codec = "4.1.1"
runtime_io = { package = "sr-io", git = "https://github.com/dillchen/substrate.git", branch = "master" }
state_machine = { package = "substrate-state-machine", git = "https://github.com/dillchen/substrate.git", branch = "master" }
substrate-executor = { git = "https://github.com/dillchen/substrate.git", branch = "master" }
primitives = { package = "substrate-primitives", git = "https://github.com/dillchen/substrate.git", branch = "master" }
trie = { package = "substrate-trie", git = "https://github.com/dillchen/substrate.git", branch = "master" }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }

[dev-dependencies]
test-client = { package = "substrate-test-client", git = "https://github.com/dillchen/substrate.git", branch = "master" }
keyring = { package = "substrate-keyring", git = "https://github.com/dillchen/substrate.git", branch = "master" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/dillchen/substrate.git", branch = "master" }
runtime_support = { package = "srml-support", git = "https://github.com/dillchen/substrate.git", branch = "master" }
balances = { package = "srml-balances", git = "https://github.com/dillchen/substrate.git", branch = "master" }
session = { package = "srml-session", git = "https://github.com/dillchen/substrate.git", branch = "master" }
staking = { package = "srml-staking", git = "https://github.com/dillchen/substrate.git", branch = "master" }
system = { package = "srml-system", git = "https://github.com/dillchen/substrate.git", branch = "master" }
timestamp = { package = "srml-timestamp", git = "https://github.com/dillchen/substrate.git", branch = "master" }
treasury = { package = "srml-treasury", git = "https://github.com/dillchen/substrate.git", branch = "master" }
contracts = { package = "srml-contracts", git = "https://github.com/dillchen/substrate.git", branch = "master" }
grandpa = { package = "srml-grandpa", git = "https://github.com/dillchen/substrate.git", branch = "master" }
indices = { package = "srml-indices", git = "https://github.com/dillchen/substrate.git", branch = "master" }
wabt = "~0.7.4"

[features]
benchmarks = []