[package]
name = "edgeware-service"
version = "0.1.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
log = "0.4"
tokio = "0.1.7"
futures = "0.1"
exit-future = "0.1"
jsonrpc-core = "13.1.0"
parity-codec = { version = "4.1.1" }
sr-io = { git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
client = { package = "substrate-client", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
substrate-rpc = { package = "substrate-rpc", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
primitives = { package = "substrate-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
inherents = { package = "substrate-inherents", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
hex-literal = "0.2"
substrate-basic-authorship = { git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
substrate-service = { git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
network = { package = "substrate-network", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
aura = { package = "substrate-consensus-aura", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
aura_primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
sr-primitives = { git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
substrate-keystore = { git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
structopt = "0.2"
transaction-factory = { git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
keyring = { package = "substrate-keyring", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
indices = { package = "srml-indices", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
im-online = { package = "srml-im-online", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
timestamp = { package = "srml-timestamp", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev", default-features = false }
rand = "0.6"
rand_chacha = "0.2.1"
finality_tracker = { package = "srml-finality-tracker", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev", default-features = false }
contracts = { package = "srml-contracts", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
edgeware-executor = { path = "../executor" }
edgeware-rpc = { path = "../rpc" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.3.2"

[dev-dependencies]
substrate-consensus-common = { git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
service-test = { package = "substrate-service-test", git = "https://github.com/hicommonwealth/substrate.git", branch = "dill.dev" }
